Remove python2 path

--- a/dot_config/fish/executable_config.fish.tmpl
+++ b/dot_config/fish/executable_config.fish.tmpl
@@ -1,10 +1,9 @@
-set -x PATH /Users/ericklaus/Library/Python/3.7/bin /usr/local/opt/python/libexec/bin /usr/local/bin /usr/bin /bin /usr/sbin /usr/local/sbin /sbin
+set -x PATH /usr/local/opt/python@3.10/bin /usr/local/opt/python/libexec/bin /usr/local/bin /usr/bin /bin /usr/sbin /usr/local/sbin /sbin
 
 set -x GOPATH /Users/ericklaus/go
 set -x PATH $PATH "/Users/ericklaus/.cargo/bin"
 set -x PATH $PATH "/Users/ericklaus/.pub-cache/bin"
 set -x PATH $PATH $HOME/go/bin
-set -x PATH $PATH "/usr/local/opt/python@2/bin"
 set -x PATH $PATH "/Users/ericklaus/bin"
 set -x PATH $PATH "/Applications/Sublime Text.app/Contents/SharedSupport/bin"
 
