Include .wk bin dir

--- a/dot_config/fish/executable_config.fish.tmpl
+++ b/dot_config/fish/executable_config.fish.tmpl
@@ -6,6 +6,7 @@ set -x PATH $PATH "/Users/ericklaus/.pub-cache/bin"
 set -x PATH $PATH $HOME/go/bin
 set -x PATH $PATH "/Users/ericklaus/bin"
 set -x PATH $PATH "/Applications/Sublime Text.app/Contents/SharedSupport/bin"
+set -x PATH $PATH "/Users/ericklaus/.wk/bin"
 
 # variables useful on most machines
 set -x EDITOR subl
