Wait when using subl as editor

--- a/dot_config/fish/executable_config.fish.tmpl
+++ b/dot_config/fish/executable_config.fish.tmpl
@@ -9,7 +9,7 @@ set -x PATH $PATH "/Applications/Sublime Text.app/Contents/SharedSupport/bin"
 set -x PATH $PATH "/Users/ericklaus/.wk/bin"
 
 # variables useful on most machines
-set -x EDITOR subl
+set -x EDITOR subl --wait
 set -x SHELL /usr/local/bin/fish
 # TODO: move these to profile specific variables so this file works for Workiva or personal
 set -x GITHUB_USER "ericklaus-wf"
