--- a/dot_config/fish/executable_config.fish.tmpl
+++ b/dot_config/fish/executable_config.fish.tmpl
@@ -13,8 +13,8 @@ set -x EDITOR subl --wait
 set -x SHELL /usr/local/bin/fish
 # TODO: move these to profile specific variables so this file works for Workiva or personal
 set -x GITHUB_USER "ericklaus-wf"
-set -x GITHUB_TOKEN "{{ (onepassword "dw5jh5ml75bwhdscurp7is7gkm").details.password }}"
-set -x HOMEBREW_GITHUB_API_TOKEN "{{ (onepassword "dw5jh5ml75bwhdscurp7is7gkm").details.password }}"
+set -x GITHUB_TOKEN "{{ (onepasswordDetailsFields "dw5jh5ml75bwhdscurp7is7gkm").password.value }}"
+set -x HOMEBREW_GITHUB_API_TOKEN "{{ (onepasswordDetailsFields "dw5jh5ml75bwhdscurp7is7gkm").password.value }}"
 
 set -x DOCKER_CONFIG "/Users/ericklaus/.wk/config/docker"
 
@@ -28,16 +28,16 @@ set -x MAVEN_OPTS "-Xmx4096m -Xms1024m"
 set -x ANT_OPTS "-Xms512m -Xmx1024m"
 
 set -x ARTIFACTORY_USER "ericklaus-wf"
-set -x ARTIFACTORY_PASS "{{ (onepassword "mzjb7u5hjjd63bg4ssog7fyyqe").details.password }}"
+set -x ARTIFACTORY_PASS "{{ (onepasswordDetailsFields "mzjb7u5hjjd63bg4ssog7fyyqe").password.value }}"
 
 set -x ARTIFACTORY_PRO_USER "eric.klaus@workiva.com"
-set -x ARTIFACTORY_PRO_PASS "{{ (onepassword "vp7l6vnqknazvah6uomr42ufe4").details.password }}"
+set -x ARTIFACTORY_PRO_PASS "{{ (onepasswordDetailsFields "vp7l6vnqknazvah6uomr42ufe4").password.value }}"
 
 set -x GOPRIVATE github.com/Workiva
 #set -x GOPROXY "https://$ARTIFACTORY_PRO_USER:$ARTIFACTORY_PRO_PASS@workivaeast.jfrog.io/workivaeast/api/go/go-prod,direct"
 
 set -x SRC_ENDPOINT "https://sourcegraph.plat.workiva.net"
-set -x SRC_ACCESS_TOKEN "{{ (onepassword "cd4htarfzffaxho62tlidew4kq").details.password }}"
+set -x SRC_ACCESS_TOKEN "{{ (onepasswordDetailsFields "cd4htarfzffaxho62tlidew4kq").password.value }}"
 
 # Python / Pip Credentials: https://pip.pypa.io/en/stable/user_guide/#environment-variables
 set -x PIP_CONFIG_FILE /Users/ericklaus/.wk/config/pip.toml
