--- a/dot_config/fish/executable_config.fish.tmpl
+++ b/dot_config/fish/executable_config.fish.tmpl
@@ -71,6 +71,7 @@ end
 
 function proxystreams --description "Connects to the Streams wk-dev database, making a connection available locally on port 3311"
   wk proxy --cluster wk-dev --host linking-api-cfh-2018-01-d-linkingaurora2dbcluster-1ejl0yb8qgom.cluster-cdsa0kvhqzyp.us-east-1.rds.amazonaws.com --port 3306 --local-port 3311
+end
 {{end }}
 
 test -e {$HOME}/.iterm2_shell_integration.fish ; and source {$HOME}/.iterm2_shell_integration.fish
